# RayCastingSFML

./: .gitignore  CMakeLists.txt  README.md
include/: Engine.hpp  Line.hpp  Mouse.hpp  Point.hpp  Ray.hpp  Raycast.hpp  Rectangle.hpp  Vector2.hpp  Wall.hpp
src/: Engine.cpp  Line.cpp  Point.cpp  Ray.cpp  Raycast.cpp  Rectangle.cpp  Vector2.cpp  main.cpp
